# diwoCG

./: .gitignore  CMakeLists.txt  README.md  control.cpp  control.h  engine.cpp  engine.h  fps.h  geometries.cpp  geometries.h  globals.h  light.cpp  light.h  listener.h  main.cpp  mat.h  material.h  nurbs_mesh.cpp  nurbs_mesh.h  obj_export.cpp  obj_export.h  obj_mesh.cpp  obj_mesh.h  objloader.cpp  objloader.h  report.md  scene_graph.h  screenshot.cpp  screenshot.h  stb_image_write.h  texture.h  texture_ctrl.cpp  texture_ctrl.h  transform.h  剧本.md
lib/: nfd.lib
